[gd_scene load_steps=8 format=2]

[ext_resource path="res://Companion/DoggySprite.png" type="Texture" id=1]
[ext_resource path="res://NPC/Runner.gd" type="Script" id=2]
[ext_resource path="res://NPC/Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://NPC/Trail.gd" type="Script" id=4]
[ext_resource path="res://Audio/mixkit-dog-barking-twice-1.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="Runner" type="KinematicBody2D" groups=["Persistent"]]
scale = Vector2( 0.75, 0.75 )
collision_layer = 16
collision_mask = 26
script = ExtResource( 2 )

[node name="Line2D2" type="Line2D" parent="."]
visible = false
show_behind_parent = true
script = ExtResource( 4 )

[node name="Line2D" parent="." instance=ExtResource( 3 )]
z_index = -1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="LineOfSight" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 13

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="ScaredSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
pitch_scale = 1.7

[connection signal="body_entered" from="Area2D" to="." method="_on_detectionArea_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_detectionArea_body_exited"]
